# LongDelta-AI

./: .env.example  .gitignore  Dockerfile  README.md  README_DELIVERY.md  app.py  docker-compose.yml  main.py  pyproject.toml  ruff.toml  test_stream.py
data/processed/: yz_delta_mock_5y.parquet
data/raw/: yz_delta_mock_5y.csv
docs/: api.md  manual.md  prompts.md
src/: cli.py
src/api/: middleware.py  schemas.py  server.py
src/graph/: agent.py  state.py  workflow.py
src/rag/: __init__.py  knowledge_base.py  tool.py
src/tools/: chart.py  definitions.py  implementation.py  parse.py
src/utils/: config.py  llm.py
tests/: __init__.py  test_tools.py
